--- a/_lib/css/Sc8_Saphir/Sc8_Saphir_form.css
+++ b/_lib/css/Sc8_Saphir/Sc8_Saphir_form.css
@@ -88,7 +88,7 @@
 .scBtnPassField { margin: 5px 2px }
 .scAjaxDiv { background-image: none; opacity: 1; filter: alpha(opacity=100); color: #000000; font-family: Arial, sans-serif; font-size: 12px; text-shadow: 20px; text-decoration: none; border-collapse: collapse; border-style: none; padding: 15px 0 0 0 }
 /*liyoujing  新增的样式*/
-#login_form{margin: 10% 12%;float: right;width: 240px;border: 1px solid white;border-radius: 4px; border-spacing: 0px;}
+#login_form{margin: 10% 12%;float: right;width: 240px;border: 1px solid white;border-radius: 4px; border-spacing: 0px;box-shadow: 5px 5px 20px #3f548eb3;}
 /*
 #main_table_form {
     width:40%;
